src/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@100;400;500;600&display=swap");

html {
  @apply scroll-smooth;
}
button, input, textarea {
  @apply outline-none focus:outline-none;
}

.fc {
  @apply flex items-center;
}

.fcb {
  @apply flex items-center justify-between;
}

.fcc {
  @apply flex items-center justify-center;
}

.container {
  @apply mx-auto;
}

html {
  /* scroll-behavior: smooth; */
  font-family: "Space Mono", monospace;
  @apply select-none;
  -webkit-font-smoothing: antialiased;
}

.overlay-1 {
  animation: gradientChange1 10s infinite;
}

.overlay-2 {
  animation: gradientChange2 10s infinite;
}

.overlay-3 {
  animation: gradientChange3 10s infinite;
}

@keyframes gradientChange1 {
  0%, 30% {
    opacity: 1;
  }

  3%, 25% {
    opacity: 0;
  }
}

@keyframes gradientChange2 {
  0%, 25%, 55% {
    opacity: 1;
  }

  30%, 50% {
    opacity: 0;
  }
}

@keyframes gradientChange3 {
  0%, 50%, 100% {
    opacity: 1;
  }

  55%, 95% {
    opacity: 0;
  }
}

.gradient-blue {
  background-image: linear-gradient(90deg, #017aff -3.88%, #21c8f6 88.09%);
}

.gradient-pink {
  background-image: linear-gradient(90deg, #ff00c7 1.62%, #bd69ff 100%);
}

.gradient-yellow {
  background-image: linear-gradient(90deg, #dac400 1.62%, #ff6636 100%);
}

.gradient-blue,
.gradient-pink,
.gradient-yellow {
  opacity: 1;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

.blue-gradient {
  background: linear-gradient(90deg, #017aff -3.88%, #21c8f6 88.09%);
}

.bg-glass-100 {
  background: rgba(255, 255, 255, 0.65);
  backdrop-filter: blur(35px);
}

.bg-gradient-blue {
  background: linear-gradient(90deg, #017aff -3.88%, #21c8f6 88.09%);
}

.last-child > :last-child {
  padding-bottom: 0rem !important;
}

.no_padding_top:nth-child(-n + 4) {
  @apply pt-0;
}

.no_padding_top:nth-child(4n) {
  @apply border-r-0;
}

.no_padding_top:nth-last-child(2),
.no_padding_top:nth-last-child(1),
.no_padding_top:nth-last-child(0) {
  @apply border-b-0 pb-5;
}

.move {
  animation: bounce 5s infinite;
}

@keyframes bounce {
  0% {
    transform: translateX(0%);
  }

  45% {
    transform: translateX(50%);
  }

  70% {
    transform: translateY(45%) translateX(25%);
  }

  100% {
    transform: translateX(0%) translateY(0%);
  }
}

.fade {
  @apply h-full w-full;
}

.fade-enter {
  opacity: 0;
}

.fade-enter-active {
  opacity: 1;
  @apply duration-300;
}

.fade-exit {
  opacity: 1;
}

.fade-exit-active {
  opacity: 0;
  @apply duration-300;
}

/* 
====================================== 
*/
.click\:scale:active {
  @apply duration-200 active:scale-95 cursor-pointer;
}

::-webkit-scrollbar {
  height: 6px;
  width: 6px;
}

::-webkit-scrollbar-track {
  background: hsla(0, 0%, 100%, 0)
}

::-webkit-scrollbar-thumb {
  background: hsla(0, 0%, 100%, .15);
  border-radius: 9999px
}

::-webkit-scrollbar-thumb:hover {
  background: hsla(0, 0%, 100%, .3)
}

html,
body,
#root {
  height: 100vh;
}

.check::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 45%;
  z-index: 10;
  width: 2px;
}

.ReactCollapse--collapse {
  transition: height 500ms;
}

.cm-scroller {
  @apply outline-none focus:outline-none;
}

.cm-gutterElement {
  @apply text-white opacity-80;
}


/***************************************************
 * Generated by SVG Artista on 5/4/2022, 4:36:49 PM
 * MIT license (https://opensource.org/licenses/MIT)
 * W. https://svgartista.net
 **************************************************/

 svg .svg-elem-1 {
  stroke-dashoffset: 26.516124725341797px;
  stroke-dasharray: 26.516124725341797px;
  -webkit-transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0s,
                        fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 0.8s;
          transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0s,
                fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 0.8s;
}

svg.active .svg-elem-1 {
  stroke-dashoffset: 0;
}

svg .svg-elem-2 {
  stroke-dashoffset: 27.806442260742188px;
  stroke-dasharray: 27.806442260742188px;
  fill: transparent;
  -webkit-transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0.2s,
                        fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 0.9s;
          transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0.2s,
                fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 0.9s;
}

svg.active .svg-elem-2 {
  stroke-dashoffset: 0;
  fill: rgb(1, 122, 255);
}

svg .svg-elem-3 {
  stroke-dashoffset: 65.22586059570312px;
  stroke-dasharray: 65.22586059570312px;
  -webkit-transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0.4s,
                        fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 1s;
          transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0.4s,
                fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 1s;
}

svg.active .svg-elem-3 {
  stroke-dashoffset: 0;
}

svg .svg-elem-4 {
  stroke-dashoffset: 65.2258529663086px;
  stroke-dasharray: 65.2258529663086px;
  -webkit-transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0.6000000000000001s,
                        fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 1.1s;
          transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0.6000000000000001s,
                fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 1.1s;
}

svg.active .svg-elem-4 {
  stroke-dashoffset: 0;
}

svg .svg-elem-5 {
  stroke-dashoffset: 66.51622009277344px;
  stroke-dasharray: 66.51622009277344px;
  fill: transparent;
  -webkit-transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0.8s,
                        fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 1.2000000000000002s;
          transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 0.8s,
                fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 1.2000000000000002s;
}

svg.active .svg-elem-5 {
  stroke-dashoffset: 0;
  fill: rgb(5, 25, 45);
}

svg.active .svg-elem-5.white {
  stroke-dashoffset: 0;
  fill: rgb(255, 255, 255);
}

svg .svg-elem-6 {
  stroke-dashoffset: 66.51622009277344px;
  stroke-dasharray: 66.51622009277344px;
  fill: transparent;
  -webkit-transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 1s,
                        fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 1.3s;
          transition: stroke-dashoffset 0.3s cubic-bezier(0.6, 0.04, 0.98, 0.335) 1s,
                fill 0.3s cubic-bezier(0.47, 0, 0.745, 0.715) 1.3s;
}

svg.active .svg-elem-6 {
  stroke-dashoffset: 0;
  fill: rgb(5, 25, 45);
}

svg.active .svg-elem-6.white {
  stroke-dashoffset: 0;
  fill: rgb(255, 255, 255);
}

/***************************************************
 * Generated by SVG Artista on 5/5/2022, 8:56:24 PM
 * MIT license (https://opensource.org/licenses/MIT)
 * W. https://svgartista.net
 **************************************************/

 svg .svg-elem-1 {
  fill: transparent;
  -webkit-transition: fill 0.7s cubic-bezier(0.47, 0, 0.745, 0.715) 0.8s;
          transition: fill 0.7s cubic-bezier(0.47, 0, 0.745, 0.715) 0.8s;
}

